# SparseAttn

./: .gitignore  README.md
bench/: bench.py  utils.py
python/: bench_utils.py
python/dense/: bench.py  dense_gated_attn_impl.py
src/: CMakeLists.txt  attn_impl.cu  dense_gated_attn_impl.py  gated_attn.cu  setup.py  utils.cuh
src/dense/: CMakeLists.txt  dense_gated_attn_impl.py  dense_gated_softmax.cu  kernels.cuh
src/ref/: attn_impl.cu  gated_attn.cc
src/sparse/: cached_attn_impl.cu
src/utils/: CMakeLists.txt  func_constructor.hpp  ops.cuh  torch_utils.cuh  type_repr.cuh  utils.cuh
tests/: convergence_test.py
